// Copyright 2026 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.subca.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/subca/v1;subcav1";

// CertificateOverride represents an override of a specific certificate of a
// Teleport CA.
//
// Certificate overrides allow customers to chain a Teleport CA to an external
// authority, effectively making the Teleport CA into a Sub CA (instead of a
// self-signed root).
message CertificateOverride {
  // SHA256(SubjectPublicKeyInfo DER) printed as hex string.
  //
  // Informative if certificate is present.
  string public_key = 1;

  // Certificate to present, in PEM form.
  //
  // The public key must match an existing CA certificate. It must also match
  // the public_key field, if present.
  //
  // The certificate Subject must contain the cluster name, either in the "O="
  // field or in OID "1.3.9999.4.1", as per RFD 0237.
  //
  // https://github.com/gravitational/teleport/blob/master/rfd/0237-sub-ca-support.md#subject-customization
  string certificate = 2;

  // Certificate chain, in PEM form.
  //
  // The chain must be sorted from leaf to root.
  //
  // If present Teleport may supply the chain, along with the certificate, in
  // appropriate situations.
  //
  // The chain is limited to a generous (but sensible) server-defined length.
  repeated string chain = 3;

  // If true disables the override.
  //
  // A disabled override may exist for recording purposes, to be enabled later,
  // or simply to mark a certain public key as not overridden. In the latter
  // case the certificate may be absent.
  bool disabled = 4;
}
